[DPEDE-5947] Fix icon alignment in drag accordion

--- a/src/chi/components/drag-and-drop/drag-and-drop.scss
+++ b/src/chi/components/drag-and-drop/drag-and-drop.scss
@@ -151,6 +151,12 @@
           }
         }
       }
+
+      .chi-drag__title-icon {
+        .chi-icon {
+          height: $accordion-md-item-line-height;
+        }
+      }
     }
   }
 }
